--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "vanam",
+  "homepage": "https://nuuuwan.github.io/vanam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/styled-engine-sc": "^7.3.6",
+    "@mui/x-charts": "^8.23.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
@@ -10,6 +17,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
