--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/blob": "^2.0.0",
     "exifr": "^7.1.3",
     "leaflet": "^1.9.4",
     "react": "^19.2.3",
