--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.2.0",
     "web-vitals": "^2.1.4"
